[package]
name = "actix-web-interop"
version = "0.1.0"
authors = ["David Mattli <david.mattli@veteransunited.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-zero = "0.3"
actix-web = "3"
tokio = { version = "0.2.22", features = ["rt-core", "time"]}
