[package]
name = "actix-web-interop"
version = "0.1.0"
authors = ["David Mattli <david.mattli@veteransunited.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-zero = { version = "0.3", features = ["default-tokio"]}
actix-web = "3"
