[package]
name = "asyncread"
version = "0.1.0"
authors = ["David Matthew Mattli <dmm@mattli.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-zero = "0.3"
actix-web = "3"
async-trait = "0.1"
futures = "0.3.6"
tokio = { version = "0.2", features = ["process"] }
tokio-util = { version = "0.3", features = ["codec"] }
